@@ -24,6 +24,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20130210
+* added FILE_SHARE_WRITE to open read CreateFile calls
+
 20130113
 * updated msvscpp files
 
